# facturazo-erp-notification-service

./: .env.example  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
migrations/: 001_initial_schema.sql  001_sqlite_schema.sql
src/: benchmark_report.rs  demo.rs  lib.rs  main.rs  worker.rs
src/api/: error.rs  handlers.rs  mod.rs  routes.rs  state.rs  template_handler.rs
src/api/middleware/: auth.rs  compression.rs  mod.rs
src/core/: config.rs  data.rs  error.rs  mod.rs
src/excel/: builder.rs  generator.rs  mod.rs
src/generators/: excel.rs  mod.rs  pdf.rs
src/models/: common.rs  document.rs  invoice.rs  mod.rs  report.rs
src/pdf/: builder.rs  generator.rs  mod.rs
src/storage/: s3.rs
src/templates/: cache.rs  engine.rs  helpers.rs  manager.rs  mod.rs  template_engine.rs  template_models.rs  template_trait.rs
src/templates/templates/: fiscal_invoice.rs  mod.rs  receipt.rs  report.rs  simple_invoice.rs
