[package]
name = "document-generator"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"
actix-web-httpauth = "0.8"

# Async Runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Document Generation - Core
rust_xlsxwriter = { version = "0.62", features = ["chrono", "zlib"] }
minijinja = { version = "1.0", features = ["builtins"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage (S3 compatible)
aws-config = "1.1"
aws-sdk-s3 = "1.15"

# Monitoring
prometheus = { version = "0.13", features = ["process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Utils
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
once_cell = "1.19"
async-trait = "0.1"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Rate Limiting
governor = "0.6"

# Data Processing
bytes = "1.5"
rand = "0.8"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# PDF Support
base64 = "0.21"
image = "0.24"
qrcode = "0.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[[bin]]
name = "api"
path = "src/main.rs"

[lib]
name = "document_generator"
path = "src/lib.rs"